# Daily_journal

./: .devcontainer.json  README.md  pyproject.toml
config/: settings.py  urls.py
daily/: apps.py  forms.py  models.py  urls.py  views.py
daily/fixtures/: tasks.json
daily/migrations/: 0001_initial.py
daily/templates/daily/: base.html  task_form.html  task_list.html
daily/templates/daily/includes/: navbar.html
static/daily/css/: tasks.css
static/daily/js/: tasks.js
